# advent

./: .gitignore  Cargo.toml  advent.go
2020/01-report-repair/: report-repair.go  report-repair.rs  report-repair_test.go
2020/02-password-philosophy/: password-philosophy.go  password-philosophy_test.go
2020/03-toboggan-trajectory/: toboggan-trajectory.go  toboggan-trajectory_test.go
2020/04-passport-processing/: passport-processing.go  passport-processing_test.go  test2.txt
2020/05-binary-boarding/: binary-boarding.go  binary-boarding_test.go
2020/06-custom-customs/: custom-customs.go  custom-customs_test.go
2020/07-handy-haversacks/: handy-haversacks.go  handy-haversacks_test.go
2020/08-handheld-halting/: handheld-halting.go  handheld-halting_test.go
2020/09-encoding-error/: encoding-error.go  encoding-error_test.go
2020/10-adapter-array/: adapter-array.go  adapter-array_test.go
cmd/start/: start.go
test/: test.go
